k8s/sv-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: helloworld
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30300
