k8s/aks-main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: helloworld
  labels:
    app: helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: app
        image: azarcr02.azurecr.io/helloworld:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "1000Mi"
            cpu: "300m"
---

apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
  annotations:
    cert-manager.io/issuer: "issuer"
  labels:
    app: helloworld
spec:
  ingressClassName: nginx
  rules:
  - host: app.joseguerrero.pro
    http:
      paths:
      - path: /helloworld
        pathType: Prefix
        backend:
          service:
            name: helloworld-service
            port:
              number: 8080
  tls:
  - hosts:
    - app.joseguerrero.pro
    secretName: helloworld-secret
