k8s/ssl-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
  annotations:
    cert-manager.io/issuer: "issuer"
  labels:
    app: helloworld
spec:
  ingressClassName: nginx
  rules:
  - host: app.joseguerrero.pro
    http:
      paths:
      - path: /helloworld
        pathType: Prefix
        backend:
          service:
            name: helloworld-service
            port:
              number: 8080
  tls:
  - hosts:
    - app.joseguerrero.pro
    secretName: helloworld-secret
